--- a/HRManagementSystem/Views/Shared/_Layout.cshtml
+++ b/HRManagementSystem/Views/Shared/_Layout.cshtml
@@ -45,6 +45,13 @@
                                 </li>
 
                                 <li>
+                                    <a class="dropdown-item" asp-controller="Department" asp-action="Index">
+                                        <i class="bi bi-diagram-3-fill me-2 text-muted"></i>
+                                        Departments
+                                    </a>
+                                </li>
+
+                                <li>
                                     <a class="dropdown-item" asp-controller="Contract" asp-action="Index">
                                         <i class="bi bi-file-earmark-text me-2 text-muted"></i>
                                         Employment Contracts
