--- a/HRManagementSystem/Views/Department/Create.cshtml
+++ b/HRManagementSystem/Views/Department/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Add New Department";
 }
 <div class="container mt-4">
-    <h2 class="mb-4">Add New Department</h2>
+    <h2 class="mb-4"> New Department</h2>
 
 <form asp-action="Create" method="post">
     <div class="row">
