--- a/HRManagementSystem/Views/Employee/Index.cshtml
+++ b/HRManagementSystem/Views/Employee/Index.cshtml
@@ -11,7 +11,7 @@
         <a asp-controller="Employee"
            asp-action="Create"
            class="btn btn-success">
-            <i class="bi bi-plus-lg me-1"></i> Add New Employee
+            <i class="bi bi-plus-lg me-1"></i>  New Employee
         </a>
     </div>
 
