- add try catch in repositry layer - add Middleware exception for MVC AND API - add summary attendance with functionality

--- a/HRManagementSystem/Views/Auth/Index.cshtml
+++ b/HRManagementSystem/Views/Auth/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model HRManagementSystem.Web.Models.LoginViewModel
+﻿@using HRManagementSystem.Web.Models.User
+@model LoginViewModel
 
 @{
     Layout = null;
