--- a/HRManagementSystem/Views/Contract/Index.cshtml
+++ b/HRManagementSystem/Views/Contract/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<HRManagementSystem.Web.Models.ContractViewModel>
+﻿@using HRManagementSystem.Web.Models.Contract
+@model List<ContractViewModel>
 
 @{
     ViewData["Title"] = "Contract List";
