--- a/HRManagementSystem/Views/Department/Edit.cshtml
+++ b/HRManagementSystem/Views/Department/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model HRManagementSystem.Web.Models.DepartmentViewModel
+﻿@using HRManagementSystem.Web.Models.Department
+@model DepartmentViewModel
 
 @{
     ViewData["Title"] = "Edit Department";
