--- a/HRManagementSystem/Views/Employee/Create.cshtml
+++ b/HRManagementSystem/Views/Employee/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model HRManagementSystem.Web.Models.EmployeeCreateViewModel
+﻿@using HRManagementSystem.Web.Models.Employee
+@model EmployeeCreateModel
 
 @{
     ViewData["Title"] = "Add New Employee";
