--- a/HRManagementSystem/Views/Employee/Index.cshtml
+++ b/HRManagementSystem/Views/Employee/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<HRManagementSystem.Web.Models.EmployeeViewModel>
+﻿@using HRManagementSystem.Web.Models.Employee
+@model List<EmployeeViewModel>
 
 @{
     ViewData["Title"] = "Employee List";
