--- a/HRManagementSystem/Views/User/index.cshtml
+++ b/HRManagementSystem/Views/User/index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<HRManagementSystem.Web.Models.UserViewModel>
+﻿@using HRManagementSystem.Web.Models.User
+@model List<UserViewModel>
 
 @{
     ViewData["Title"] = "Users";
