--- a/HRManagementSystem/Views/Department/Index.cshtml
+++ b/HRManagementSystem/Views/Department/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<HRManagementSystem.Web.Models.DepartmentViewModel>
+﻿@using HRManagementSystem.Web.Models.Department
+@model List<DepartmentViewModel>
 
 @{
     ViewData["Title"] = "Department List";
