--- a/HRManagementSystem/Views/_ViewImports.cshtml
+++ b/HRManagementSystem/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using HRManagementSystem
-@using HRManagementSystem.Models
+@using HRManagementSystem.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
